applications/pipeline/upstream/base/installs/multi-user/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ml-pipeline-ui
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - kubeflow.develop.pe.underdogsports.com
  http:
  - match:
    - uri:
        prefix: /pipeline
    rewrite:
      uri: /pipeline
    route:
    - destination:
        host: ml-pipeline-ui.$(kfp-namespace).svc.cluster.local
        port:
          number: 80
    timeout: 300s
